fixed some pages

--- a/acredetion.html
+++ b/acredetion.html
@@ -73,28 +73,28 @@
             </div>
         </div>
         <div class="header__fon">
-            <h1 class="header__fon_h1">About INTESOL Worldwide</h1>
+            <h1 class="header__fon_h1">Accreditation</h1>
         </div>
     </header>
 
     <main class="main__block d-flex">
         <div class="main__block_left">
             <img class="main__block_left_img"
-                src="img/about.jpg" alt="">
+                src="img/acred-img.jpg" alt="">
         </div>
         <div class="main__block_right">
             <div class="main__block_right_text">
-                <h6 class="main__block_right_text_h6">Our Mission</h6>
+                <h6 class="main__block_right_text_h6">Accreditation</h6>
                 <p class="main__block_right_text_p">The overall mission of INTESOL is to help people from a broad range
                     of backgrounds achieve a varied and fulfilling lifestyle through teaching English and living abroad.
                 </p>
-                <p class="main__block_right_text_p">Our aim is to help you develop and grow as a person by showing you
+                <p class="main__block_right_text_p">Accreditation is to help you develop and grow as a person by showing you
                     how to become a confident, well-resourced, professional ESOL/EFL teacher.</p>
                 <p class="main__block_right_text_p">Through continuing research and development INTESOL seeks to be the
                     world leader in quality TESOL/TEFL training; TESOL/TEFL training that takes into account the demands
                     of everyday life.</p>
                 <p class="main__block_right_text_p">We are ranked amongst the top TEFL/TESOL course providers for the
-                    quality of our teaching so, whatever your reason for studying, you’ll find yourself in expert hands.
+                    quality of our teaching so, whatever your reason for studying, youâ€™ll find yourself in expert hands.
                 </p>
                 <h6 class="main__block_right_text_h6">When you choose INTESOL Worldwide YOU CHOOSE:</h6>
                 <ul>
@@ -110,7 +110,7 @@
                         giving you maximum flexibility to gain practical experience.</li>
                     <li class="main__block_right_text_li">You gain access to our network of TEFL/TESOL job contacts
                         around the world.</li>
-                    <li class="main__block_right_text_li">A course provider who will help with your visa – click here.
+                    <li class="main__block_right_text_li">A course provider who will help with your visa â€“ click here.
                     </li>
                 </ul>
                 <h6 class="main__block_right_text_h6 h6__italic">We are registered on the UK Register of Learning
@@ -157,10 +157,10 @@
             </div>
             <div class="footer__block_icon d-flex">
                 <div class="instagram">
-                    <a class="instagram_link" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="instagram_link" href="https://www.instagram.com/tesolasia.international/"><i class="fab fa-instagram"></i></a>
                 </div>
                 <div class="facebook">
-                    <a class="facebook_link" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="facebook_link" href="https://m.facebook.com/TESOLAsiaUzbekistan/manager/?notif_t=page_user_activity&notif_id=1632165991742892&ref=m_notif"><i class="fab fa-facebook-f"></i></a>
                 </div>
                 <div class="telegram">
                     <a class="telegram_link" href="https://t.me/TesolAsiauz"><i class="fab fa-telegram-plane"></i></a>
