--- a/reviews.html
+++ b/reviews.html
@@ -34,7 +34,7 @@
                                     <a class="header_nav-link" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="header_nav-link" aria-current="page" href="index.html">Courses</a>
+                                    <a class="header_nav-link" aria-current="page" href="cours.html">Courses</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="header_nav-link" href="TeflJobs.html">TEFL Jobs</a>
@@ -51,7 +51,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="header_nav-link" href="#">Accreditation</a>
+                                    <a class="header_nav-link" href="acredetion.html">Accreditation</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="header_nav-link" href="partners.html">Our partners</a>
