--- a/cours.html
+++ b/cours.html
@@ -24,7 +24,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img class="header__menu_img" src="img/logo2.png" alt=""></a>
+            <a class="navbar-brand" href="index.html"><img class="header__menu_img" src="img/logo2.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav margin_auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="header_nav-link" aria-current="page" href="#">Home</a>
+                  <a class="header_nav-link" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="header_nav-link" aria-current="page" href="cours.html">Courses</a>
@@ -91,59 +91,14 @@
     </div>
   </header>
 
-  <main class="main__block">
-    <h4 class="main__block_h4">You Can Trust INTESOL</h4>
-    <p class="main__block_p">TEFL courses from the leading quality course provider for over 27 years!</p>
-    <div class="main__block_box">
-      <div class="row row-ml">
-        <div class="col-lg-4 col-md-4 col-12 col-pd">
-          <img class="main__block_img wow zoomIn" data-wow-duration="3s" src="img/main__block_img.jpg" alt="">
-        </div>
-        <div class="col-lg-8 col-md-8 col-12 col-pd">
-          <div class="main__block_text">
-            <h2 class="main__block_text_h2">120 Hour Certificate in TEFL Plus</h2>
-            <p class="main__block_text_p">New course acceptable worldwide for ANY type of teaching:-</p>
-            <ul class="main__block_text_ul">
-              <li class="main__block_text_ul_li">In-class (also called onsite)</li>
-              <li class="main__block_text_ul_li">Online (from the comfort of your own home or in-company)</li>
-              <li class="main__block_text_ul_li">Teaching Young Learners – online or onsite</li>
-            </ul>
-            <div class="main__block_text_second">
-              <p class="main__block_text_second_p">Includes:</p>
-              <ol class="main__block_text_second_ol">
-                <li class="main__block_text_second_ol_li">All training online with a personal tutor qualified to Masters
-                  in TESOL as a minimum</li>
-                <li class="main__block_text_second_ol_li">Graded 120 hour Certificate in TEFL Plus direct from the
-                  Accrediting Body, ALAP</li>
-                <li class="main__block_text_second_ol_li">Issue number verifiable on the ALAP website from anywhere in
-                  the world</li>
-                <li class="main__block_text_second_ol_li">Course certificate and transcript in PDF format</li>
-                <li class="main__block_text_second_ol_li">Hard copy with extra security of a hologram on request</li>
-                <li class="main__block_text_second_ol_li">Interview with a world-leading online recruitment company if
-                  required (terms apply)</li>
-              </ol>
-            </div>
-            <p class="main__block_text_extra">EXTRA – introduction to an Apostille Service with a discounted fee if
-              your
-              employer requires this.</p>
-            <p class="main__block_text_price">Price £175</p>
-            <h6 class="main__block_text_h6">ADD TEACHING PRACTICE FOR JUST 100GBP (ONLINE OR VIDEO SUBMISSION)</h6>
-            <p class="main__block_text_some">Some employers may need evidence that you can teach. INTESOL gives you the
-              opportunity to prove it,</p>
-            <button class="main__block_text_button wow bounceInRight" data-wow-duration="3s">See Course<i
-                class="main__block_text_button_icon fas fa-arrow-right"></i></button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </main>
-
+  <!-- .main__courses_h5 {
+    padding: 45px 0 100px 0;
+} -->
 
   <main class="main__courses">
     <div class="container">
       <div class="row row-ml justify-content-center">
-        <h5 class="main__courses_h5">Most Popular Courses</h5>
+        <h5 class="main__courses_h5_1">Most Popular Courses</h5>
         <div class="col-lg-4 col-md-6 col-sm-6 col-11 col-pd">
           <div class="main__courses-box wow fadeInLeft" data-wow-duration="3s">
             <div class="main__courses-box_first">
@@ -164,7 +119,7 @@
               </ul>
             </div>
             <div class="main__courses-box_button">
-              <button class="main__courses-box_button_link">120 hour learn more</button>
+                <a href="index.html" class="main__courses-box_button_link-777">Read more</a>
             </div>
           </div>
         </div>
@@ -188,7 +143,7 @@
               </ul>
             </div>
             <div class="main__courses-box_button">
-              <button class="main__courses-box_button_link">120 hour learn more</button>
+                <a href="levelpage.html" class="main__courses-box_button_link-777">Read more</a>
             </div>
           </div>
         </div>
@@ -212,7 +167,7 @@
               </ul>
             </div>
             <div class="main__courses-box_button">
-              <button class="main__courses-box_button_link">120 hour learn more</button>
+                <a href="levelpage.html" class="main__courses-box_button_link-777">Read more</a>
             </div>
           </div>
         </div>
@@ -236,7 +191,7 @@
               </ul>
             </div>
             <div class="main__courses-box_button">
-              <button class="main__courses-box_button_link">120 hour learn more</button>
+                <a href="levelpage.html" class="main__courses-box_button_link-777">Read more</a>
             </div>
           </div>
         </div>
@@ -260,7 +215,7 @@
               </ul>
             </div>
             <div class="main__courses-box_button">
-              <button class="main__courses-box_button_link">120 hour learn more</button>
+                <a href="levelpage.html" class="main__courses-box_button_link-777">Read more</a>
             </div>
           </div>
         </div>
@@ -284,7 +239,79 @@
               </ul>
             </div>
             <div class="main__courses-box_button">
-              <button class="main__courses-box_button_link">120 hour learn more</button>
+                <a href="levelpage.html" class="main__courses-box_button_link-777">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-11 col-pd">
+          <div class="main__courses-box wow fadeInLeft" data-wow-duration="3s">
+            <div class="main__courses-box_first">
+              <h4 class="main__courses-box_first_h4">170 hour</h4>
+              <span class="main__courses-box_first_span">Certificate in TEFL</span>
+            </div>
+            <div class="main__courses-box_second">
+              <p class="main__courses-box_second_p"><sup class="sup"></sup></p>
+            </div>
+            <div class="main__courses-box_thirst">
+              <ul>
+                <li class="main__courses-box_thirst-ul-li">120 hours of quality training including TEYL</li>
+                <li class="main__courses-box_thirst-ul-li">Work at your own speed</li>
+                <li class="main__courses-box_thirst-ul-li">Online with an MA qualified, experienced trainer</li>
+                <li class="main__courses-box_thirst-ul-li">Certification issued by Accrediting Body</li>
+                <li class="main__courses-box_thirst-ul-li">Issue number verifiable on Accrediting Body website</li>
+                <li class="main__courses-box_thirst-ul-li">Established 1993</li>
+              </ul>
+            </div>
+            <div class="main__courses-box_button">
+                <a href="levelpage.html" class="main__courses-box_button_link-777">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-11 col-pd">
+          <div class="main__courses-box wow fadeIn" data-wow-duration="3s">
+            <div class="main__courses-box_first">
+              <h4 class="main__courses-box_first_h4">170 hour</h4>
+              <span class="main__courses-box_first_span">Certificate in TEFL</span>
+            </div>
+            <div class="main__courses-box_second">
+              <p class="main__courses-box_second_p"><sup class="sup"></sup></p>
+            </div>
+            <div class="main__courses-box_thirst">
+              <ul>
+                <li class="main__courses-box_thirst-ul-li">120 hours of quality training including TEYL</li>
+                <li class="main__courses-box_thirst-ul-li">Work at your own speed</li>
+                <li class="main__courses-box_thirst-ul-li">Online with an MA qualified, experienced trainer</li>
+                <li class="main__courses-box_thirst-ul-li">Certification issued by Accrediting Body</li>
+                <li class="main__courses-box_thirst-ul-li">Issue number verifiable on Accrediting Body website</li>
+                <li class="main__courses-box_thirst-ul-li">Established 1993</li>
+              </ul>
+            </div>
+            <div class="main__courses-box_button">
+                <a href="levelpage.html" class="main__courses-box_button_link-777">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-11 col-pd">
+          <div class="main__courses-box  wow fadeInRight" data-wow-duration="3s">
+            <div class="main__courses-box_first">
+              <h4 class="main__courses-box_first_h4">170 hour</h4>
+              <span class="main__courses-box_first_span">Certificate in TEFL</span>
+            </div>
+            <div class="main__courses-box_second">
+              <p class="main__courses-box_second_p"><sup class="sup"></sup></p>
+            </div>
+            <div class="main__courses-box_thirst">
+              <ul>
+                <li class="main__courses-box_thirst-ul-li">120 hours of quality training including TEYL</li>
+                <li class="main__courses-box_thirst-ul-li">Work at your own speed</li>
+                <li class="main__courses-box_thirst-ul-li">Online with an MA qualified, experienced trainer</li>
+                <li class="main__courses-box_thirst-ul-li">Certification issued by Accrediting Body</li>
+                <li class="main__courses-box_thirst-ul-li">Issue number verifiable on Accrediting Body website</li>
+                <li class="main__courses-box_thirst-ul-li">Established 1993</li>
+              </ul>
+            </div>
+            <div class="main__courses-box_button">
+                <a href="levelpage.html" class="main__courses-box_button_link-777">Read more</a>
             </div>
           </div>
         </div>
@@ -293,127 +320,8 @@
   </main>
 
 
-  <main class="main__information">
-    <div class="container">
-      <div class="row row-ml justify-content-around">
-        <div class="col-lg-3 col-md-4 col-sm-6 col-12 col-pd">
-          <div class="main__information_box">
-            <h6 class="main__information_box_h6">Why INTESOL</h6>
-            <p class="main__information_box_text">INTESOL Worldwide was founded in the UK in 1993 in the belief that
-              anyone possessing the passion to
-              teach, the skills to express themselves clearly, and the desire to make a difference in the lives of
-              others should be given the opportunity and encouragement to gain a professional certification in TEFL /
-              TESOL.</p>
-            <h6 class="main__information_box_h6">Employers Seek Our Graduates</h6>
-            <p class="main__information_box_text">A qualification with our company will ensure you land a job with a
-              reputable employer!</p>
-            <p class="main__information_box_text">Our graduates who found work – 100%</p>
-            <p class="main__information_box_text">We are well known throughout the world with branches on every
-              continent.</p>
-            <p class="main__information_box_text">Enrol now and follow your dream!</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-12 col-pd">
-          <div class="main__information_box_second">
-            <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow fadeIn" data-wow-duration="3s"></i>
-              <p class="main__information_box_second_block_p">27 years of solid reputation & experience</p>
-            </div>
-          </div>
-          <div class="main__information_box_second">
-            <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow  fadeIn" data-wow-duration="3s"></i>
-              <p class="main__information_box_second_block_p">Quality courses known throughout the world</p>
-            </div>
-          </div>
-          <div class="main__information_box_second">
-            <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow  fadeIn" data-wow-duration="3s"></i>
-              <p class="main__information_box_second_block_p">Accredited by specialist UK ELT Awarding Body</p>
-            </div>
-          </div>
-          <div class="main__information_box_second">
-            <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow  fadeIn" data-wow-duration="3s"></i>
-              <p class="main__information_box_second_block_p">Online/onsite TEFL courses with teaching practice</p>
-            </div>
-          </div>
-          <div class="main__information_box_second">
-            <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow  fadeIn" data-wow-duration="3s"></i>
-              <p class="main__information_box_second_block_p">Worldwide network of INTESOL branches</p>
-            </div>
-          </div>
-          <div class="main__information_box_second">
-            <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow fadeIn" data-wow-duration="3s"></i>
-              <p class="main__information_box_second_block_p">Network of verified TEFL job contacts</p>
-            </div>
-          </div>
-          <div class="main__information_box_second">
-            <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow fadeIn" data-wow-duration="3s"></i>
-              <p class="main__information_box_second_block_p">Flexible study options</p>
-            </div>
-          </div>
-          <div class="main__information_box_second">
-            <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check wow fadeIn" data-wow-duration="3s"></i>
-              <p class="main__information_box_second_block_p">Team of highly qualified TESOL instructors</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-12 col-pd">
-          <div class="main__information_box_third">
-            <img class="main__information_box_third_img" src="img/logo_img.png" alt="">
-            <p class="main__information_box_third_p">INTESOL TEFL courses are Accredited by ALAP, a specialist
-              international ELT Awarding Organisation</p>
-          </div>
-        </div>
-        <div class="col-lg-6 col-12 col-pd">
-          <div class="main__information_text text-center">
-            <p class="main__information_text_p">UKRLP (UK Register of Learning Providers). Number 10012948</p>
-            <h6 class="main__information_text_h6">INTESOL Worldwide is registered under the UKRLP (UK Register of
-              Learning Providers).
-              Registration on the UKRLP means that we have been verified against a recognised legal source.</h6>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>
 
-  <main class="main__logo">
-    <div class="container">
-      <div class="row row-ml justify-content-around">
-        <div class="col-lg-2 col-md-3 col-sm-5 col-6 col-pd">
-          <img class="main__logo_img" src="img/icon_1.png" alt="">
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-5 col-6 col-pd">
-          <img class="main__logo_img" src="img/icon_3.png" alt="">
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-5 col-6 col-pd">
-          <img class="main__logo_img" src="img/icon_6.png" alt="">
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-5 col-6 col-pd">
-          <img class="main__logo_img" src="img/icon_7.png" alt="">
-        </div>
-      </div>
-      <div class="main__logo_box">
-        <div class="row row-ml justify-content-center align-items-center">
-          <div class="col-lg-2 col-md-3 col-sm-5 col-6 col-pd">
-            <img class="main__logo_box_img" src="img/icon_2.png" alt="">
-          </div>
-          <div class="col-lg-2 col-md-3 col-sm-5 col-6 col-pd">
-            <img class="main__logo_box_img" src="img/icon_5.png" alt="">
-          </div>
-          <div class="col-lg-2 col-md-3 col-sm-10 col-10 col-pd">
-            <img class="main__logo_box_img" src="img/icon_4.png" alt="">
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </main>
+ 
 
   <footer class="footer__block">
     <div class="container text-center">
