--- a/partners.html
+++ b/partners.html
@@ -36,7 +36,7 @@
                                     <a class="header_nav-link" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="header_nav-link" aria-current="page" href="#">Courses</a>
+                                    <a class="header_nav-link" aria-current="page" href="cours.html">Courses</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="header_nav-link" href="TeflJobs.html">TEFL Jobs</a>
@@ -53,7 +53,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="header_nav-link" href="#">Accreditation</a>
+                                    <a class="header_nav-link" href="acredetion.html">Accreditation</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="header_nav-link" href="partners.html">Our partners</a>
@@ -172,13 +172,13 @@
           <div class="container">
             <nav class="footer__menu_nav">
               <ul class="footer__menu_nav_ul d-flex justify-content-around flex-wrap">
-                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Home</a></li>
-                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Courses</a></li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="index.html">Home</a></li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="cours.html">Courses</a></li>
                 <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="TeflJobs.html">TEFL Jobs</a>
                 </li>
                 <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="worldwide.html">About</a>
                 </li>
-                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Accreditation</a></li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="acredetion.html">Accreditation</a></li>
                 <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="partners.html">Our
                     partners</a></li>
                 <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet Our
